--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,10 @@ footer .center_section ul {
   list-style-type: none;
   color: white;
 }
+footer .center_section ul   a {
+    text-decoration: none;
+    color: white;
+  }
 footer .center_section p {
   color: white;
   margin: 0;
